<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_menu_save"
        android:icon="@drawable/ic_action_save"
        android:title="@string/edit_feed_menu_save"
        app:showAsAction="never|withText|ifRoom" />
    <item
        android:id="@+id/action_menu_search_icon"
        android:icon="@drawable/ic_action_get_icon"
        android:title="@string/edit_feed_menu_search_icon"
        app:showAsAction="never|withText" />
    <item
        android:id="@+id/action_menu_reinitialize"
        android:icon="@drawable/ic_action_reinitialize"
        android:title="@string/edit_feed_menu_reinitialize"
        app:showAsAction="never|withText" />
    <item
        android:id="@+id/action_menu_delete"
        android:icon="@drawable/ic_action_delete"
        android:title="@string/edit_feed_menu_delete"
        app:showAsAction="never|withText" />
</menu>