<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/group_feeds">
        <item
            android:id="@+id/action_menu_add_feed"
            android:icon="@drawable/ic_action_add"
            android:title="@string/main_menu_add_feed"
            app:showAsAction="never|withText" />
        <item
            android:id="@+id/action_menu_feed_list"
            android:icon="@drawable/ic_action_feed_list"
            android:title="@string/main_menu_feed_list"
            app:showAsAction="never|withText" />
    </group>
    <group
        android:id="@+id/group_about">
        <item
            android:id="@+id/action_menu_about"
            android:icon="@drawable/ic_action_about"
            android:title="@string/main_menu_about"
            app:showAsAction="never|withText" />
    </group>
</menu>