<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/group_feeds">
        <item
            android:id="@+id/action_menu_add_feed"
            android:icon="@drawable/ic_action_add"
            android:title="@string/main_menu_add_feed"
            app:showAsAction="never|withText|ifRoom" />
    </group>
    <group
        android:id="@+id/group_opml">
        <item
            android:id="@+id/action_menu_import_opml"
            android:icon="@drawable/ic_action_import"
            android:title="@string/feeds_menu_import_opml"
            app:showAsAction="never|withText" />
        <item
            android:id="@+id/action_menu_export_opml"
            android:icon="@drawable/ic_action_export"
            android:title="@string/feeds_menu_export_opml"
            app:showAsAction="never|withText" />
    </group>
</menu>