<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            android:text="@string/wtfpl_license_1"
            android:textAlignment="center"
            android:textAppearance="?android:textAppearanceLarge" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            android:justificationMode="inter_word"
            android:text="@string/wtfpl_license_2"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            android:text="@string/wtfpl_license_3"
            android:textAlignment="center"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            android:justificationMode="inter_word"
            android:text="@string/wtfpl_license_4"
            android:textAppearance="?android:textAppearanceMedium" />
    </LinearLayout>
</ScrollView>