<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/ic_launcher_foreground" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/app_name"
                    android:textAppearance="?android:textAppearanceLarge" />

                <TextView
                    android:id="@+id/version"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/app_name"
                    android:textAppearance="?android:textAppearanceMedium" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="25sp"
            android:src="@drawable/separator"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/sourcecode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="15sp"
            android:drawablePadding="15sp"
            android:text="@string/source_code"
            android:textAppearance="?android:textAppearanceMedium"
            app:drawableStartCompat="@drawable/ic_action_link" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="15sp"
            android:src="@drawable/separator"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="15sp"
            android:justificationMode="inter_word"
            android:text="@string/about_license"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/about_license"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="15sp"
            android:drawablePadding="15sp"
            android:text="@string/about_license_link"
            android:textAppearance="?android:textAppearanceMedium"
            app:drawableStartCompat="@drawable/ic_action_link" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="15sp"
            android:justificationMode="inter_word"
            android:text="@string/about_material"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/about_material"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="15sp"
            android:drawablePadding="15sp"
            android:text="@string/about_material_link"
            android:textAppearance="?android:textAppearanceMedium"
            app:drawableStartCompat="@drawable/ic_action_link" />
    </LinearLayout>
</ScrollView>